# loco

./: Cargo.toml
examples/demo/src/: app.rs
loco-extras/: Cargo.toml
loco-extras/src/initializers/: catch_panic.rs  composable.rs  compression.rs  cors.rs  etag.rs  limit_payload.rs  mod.rs  powered_by_header.rs  request_tracing.rs  static_assets.rs  timeout.rs
src/controller/: app_routes.rs
src/controller/middleware/: catch_panic.rs  mod.rs
