[package]
name = "loco-extras"
version = "0.1.3"
description = "Common loco components"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
# initializer
axum-prometheus = { version = "0.6.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
byte-unit = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dependencies.loco-rs]
path = "../"
version = "0.3.0"
default-features = true

[features]
default = ["full"]
full = [
    "initializer-prometheus",
    "initializer-extra-db",
    "initializer-multi-db",
    "initializer-etag",
    "initializer-catch-panic",
    "initializer-request-tracing",
    "initializer-timeout",
    "initializer-compression",
    "initializer-static-assets",
    "initializer-powered-by-header",
    "initializer-cors",
    "initializer-composable",
]

initializer-prometheus = ["dep:axum-prometheus"]
initializer-extra-db = []
initializer-multi-db = ["dep:serde_json"]
initializer-etag = []
initializer-catch-panic = []
initializer-limit-payload = ["dep:byte-unit"]
initializer-request-tracing = ["dep:tower-http", "dep:uuid"]
initializer-timeout = []
initializer-compression = []
initializer-static-assets = []
initializer-powered-by-header = []
initializer-cors = []
initializer-composable = []
